一个正常的前端Vue

--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "vue": "^2.5.16",
-    "vue-server-renderer": "^2.5.16"
+    "vue-loader": "^14.2.2",
+    "vue-server-renderer": "^2.5.16",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^3.10.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0"
   }
 }
