--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-webpack-plugin": "^2.30.1",
     "vue": "^2.5.16",
     "vue-loader": "^14.2.2",
+    "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1",
