--- a/Lesson-5/package.json
+++ b/Lesson-5/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack",
+    "lint": "eslint --ext .js --ext .jsx --ext .vue ./client",
+    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue ./client",
+    "pre-commit": "npm run lint"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -20,21 +24,33 @@
     "babel-preset-es2015": "^6.18.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.0.2",
+    "eslint": "^5.11.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.0.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.2.1",
     "image-webpack-loader": "^4.6.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "url-loader": "^1.1.2",
+    "vue-eslint-parser": "^4.0.3",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.8.3",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.13"
+    "webpack-dev-server": "^3.1.13",
+    "webpack-merge": "^4.1.5"
   },
   "dependencies": {
     "vue": "^2.5.21"
