--- a/Lesson-5/package.json
+++ b/Lesson-5/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "practice": "cross-env NODE_ENV=practice webpack-dev-server",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack",
     "lint": "eslint --ext .js --ext .jsx --ext .vue ./client",
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue ./client",
@@ -18,6 +19,7 @@
     "babel-eslint": "^10.0.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.0",
     "babel-loader": "^7.1.5",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
@@ -53,6 +55,7 @@
     "webpack-merge": "^4.1.5"
   },
   "dependencies": {
-    "vue": "^2.5.21"
+    "vue": "^2.5.21",
+    "vue-router": "^3.0.2"
   }
 }
