--- a/Lesson-5/package.json
+++ b/Lesson-5/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "vue": "^2.5.21",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.0.1"
   }
 }
