--- a/Lesson-5/package.json
+++ b/Lesson-5/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server",
+    "dev:server": "cross-env NODE_ENV=development supervisor server/server.js",
     "practice": "cross-env NODE_ENV=practice webpack-dev-server",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack",
     "lint": "eslint --ext .js --ext .jsx --ext .vue ./client",
@@ -21,9 +22,11 @@
     "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.2.0",
     "css-loader": "^2.0.2",
     "eslint": "^5.11.0",
@@ -38,6 +41,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.2.1",
     "image-webpack-loader": "^4.6.0",
+    "memory-fs": "^0.4.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
@@ -47,6 +51,7 @@
     "url-loader": "^1.1.2",
     "vue-eslint-parser": "^4.0.3",
     "vue-loader": "^15.4.2",
+    "vue-server-renderer": "^2.5.22",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.8.3",
@@ -55,6 +60,10 @@
     "webpack-merge": "^4.1.5"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "ejs": "^2.6.1",
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
