--- a/Lesson-5/package.json
+++ b/Lesson-5/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server",
-    "dev:server": "cross-env NODE_ENV=development supervisor server/server.js",
+    "dev:server": "nodemon server/server.js",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "practice": "cross-env NODE_ENV=practice webpack-dev-server",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack",
     "lint": "eslint --ext .js --ext .jsx --ext .vue ./client",
@@ -27,6 +28,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-3": "^6.24.1",
+    "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.0.2",
     "eslint": "^5.11.0",
@@ -44,6 +46,7 @@
     "memory-fs": "^0.4.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "nodemon": "^1.18.9",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
     "rimraf": "^2.6.2",
@@ -57,14 +60,17 @@
     "webpack": "^4.8.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.13",
-    "webpack-merge": "^4.1.5"
+    "webpack-merge": "^4.1.5",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "ejs": "^2.6.1",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
     "vue": "^2.5.21",
+    "vue-meta": "^1.5.8",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   }
