--- a/Lesson-5/package.json
+++ b/Lesson-5/package.json
@@ -8,7 +8,9 @@
     "dev:server": "nodemon server/server.js",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "practice": "cross-env NODE_ENV=practice webpack-dev-server",
-    "build": "rimraf dist && cross-env NODE_ENV=production webpack",
+    "build:client": "rimraf client-build && cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "build:server": "rimraf server-build && cross-env NODE_ENV=production webpack --config webpack.config.server.js",
+    "build": "npm run build:client && npm run build:server",
     "lint": "eslint --ext .js --ext .jsx --ext .vue ./client",
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue ./client",
     "pre-commit": "npm run lint"
