--- a/Lesson-5/package.json
+++ b/Lesson-5/package.json
@@ -70,8 +70,11 @@
     "axios": "^0.18.0",
     "ejs": "^2.6.1",
     "koa": "^2.7.0",
+    "koa-body": "^4.0.8",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
+    "koa-session": "^5.10.1",
+    "sha1": "^1.1.1",
     "vue": "^2.5.21",
     "vue-meta": "^1.5.8",
     "vue-router": "^3.0.2",
