--- a/Lesson-5/client-build/vue-ssr-client-manifest.json
+++ b/Lesson-5/client-build/vue-ssr-client-manifest.json
@@ -1,76 +1,61 @@
 {
-  "publicPath": "/client-build/",
+  "publicPath": "/client-build",
   "all": [
-    "bundle.c39c3c0a.js",
+    "bundle.b2258525.js",
     "index.html",
-    "main.142d3079.css",
-    "main.f8eb0879.js",
+    "main.171927c1.css",
+    "main.b1aad8ab.js",
     "resource/1.7802b8c2.jpg",
-    "vendors~main.2bbc459c.js"
+    "vendors~main.71593090.js"
   ],
   "initial": [
-    "bundle.c39c3c0a.js",
-    "vendors~main.2bbc459c.js",
-    "main.142d3079.css",
-    "main.f8eb0879.js"
+    "bundle.b2258525.js",
+    "vendors~main.71593090.js",
+    "main.171927c1.css",
+    "main.b1aad8ab.js"
   ],
   "async": [],
   "modules": {
-    "22922336": [
-      2,
-      3,
-      4,
-      4
-    ],
     "37244420": [
       2,
       3,
       4,
       4
     ],
+    "56990290": [
+      5
+    ],
+    "57190684": [
+      2,
+      3,
+      4,
+      4
+    ],
+    "68466260": [
+      5
+    ],
     "92d7f012": [
+      5
+    ],
+    "f89ccd54": [
+      5
+    ],
+    "72b9a901": [
+      5
+    ],
+    "5fad4143": [
       5
     ],
     "1ed9c983": [
       5
     ],
-    "4410c7c1": [
+    "53375a95": [
       2,
       3,
       4,
       4
     ],
-    "7fc7a8ca": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "735fb5d4": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "4ba6c9a6": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "686a6200": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "435edf51": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "a1cd04aa": [
+    "147eabff": [
       2,
       3,
       4,
@@ -82,43 +67,7 @@
       4,
       4
     ],
-    "659fabe5": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "1f7bce82": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "d5aeb7d6": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "1f2a2f7b": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "296bb1ba": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "b1aab0ec": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "312c32f0": [
+    "6ba62393": [
       2,
       3,
       4,
@@ -130,52 +79,31 @@
       4,
       4
     ],
-    "747180b5": [
+    "5584089a": [
       2,
       3,
       4,
       4
     ],
-    "3df15792": [
+    "37ca8bc7": [
       2,
       3,
       4,
       4
     ],
-    "5fad4143": [
-      5
-    ],
-    "5852cce1": [
+    "8ed70ba2": [
       2,
       3,
       4,
       4
     ],
-    "6b91ff87": [
+    "14ee76ec": [
       2,
       3,
       4,
       4
     ],
-    "060e628c": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "313aa108": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "79e3397e": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "40b5faf9": [
+    "6538eb9c": [
       2,
       3,
       4,
@@ -184,64 +112,40 @@
     "52a779c6": [
       5
     ],
-    "3d6e849b": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "85ef308a": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "f89ccd54": [
+    "20a9032a": [
       5
     ],
-    "75c3f6e8": [
-      5
-    ],
-    "27099bc1": [
+    "fce666f0": [
       5
     ],
     "02670be2": [
       5
     ],
+    "4cd5755c": [
+      5
+    ],
+    "2640a1ad": [
+      5
+    ],
+    "c71fe728": [
+      5
+    ],
+    "2b37e496": [
+      5
+    ],
     "016f9b36": [
       5
     ],
-    "b06966ee": [
+    "5a04486e": [
+      5
+    ],
+    "434a691e": [
       2,
       3,
       4,
       4
     ],
-    "9069088c": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "5294c1b2": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "5293d8f4": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "38ec7978": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "8da8f38e": [
+    "05fa02a3": [
       2,
       3,
       4,
@@ -253,37 +157,13 @@
       4,
       4
     ],
-    "4faf0865": [
+    "2ef6696f": [
       2,
       3,
       4,
       4
     ],
-    "78eb696a": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "a2cb2602": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "4856d636": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "54e7fd4e": [
-      2,
-      3,
-      4,
-      4
-    ],
-    "f21ed398": [
+    "92c2ed84": [
       2,
       3,
       4,
@@ -295,37 +175,79 @@
       4,
       4
     ],
-    "490bba06": [
+    "1c6b576b": [
       2,
       3,
       4,
       4
     ],
-    "33efd713": [
+    "0f9e265a": [
       2,
       3,
       4,
       4
     ],
-    "7bcd2ef4": [
+    "28e55b1c": [
+      5
+    ],
+    "c542b5fa": [
+      5
+    ],
+    "b66c96f8": [
+      5
+    ],
+    "c780d42c": [
+      5
+    ],
+    "7eb88a5b": [
+      5
+    ],
+    "241669b8": [
+      5
+    ],
+    "98c9149c": [
+      5
+    ],
+    "d742547e": [
+      5
+    ],
+    "e732e34c": [
+      5
+    ],
+    "63712f2d": [
+      5
+    ],
+    "ae3b7478": [
+      5
+    ],
+    "7300cbba": [
+      5
+    ],
+    "7cd7aa1b": [
+      5
+    ],
+    "3f8856b4": [
+      5
+    ],
+    "87d6d382": [
+      5
+    ],
+    "4d4fafdc": [
+      5
+    ],
+    "33a9d266": [
       2,
       3,
       4,
       4
     ],
-    "3cb370c4": [
-      2,
-      3,
-      4,
-      4
+    "75c3f6e8": [
+      5
     ],
-    "39c69efb": [
-      2,
-      3,
-      4,
-      4
+    "27099bc1": [
+      5
     ],
-    "3bf32f88": [
+    "83cb0b80": [
       2,
       3,
       4,
@@ -337,19 +259,43 @@
       4,
       4
     ],
+    "3d6e849b": [
+      2,
+      3,
+      4,
+      4
+    ],
     "0e0b039e": [
       2,
       3,
       4,
       4
     ],
-    "c559e004": [
+    "28fcd232": [
       2,
       3,
       4,
       4
     ],
-    "a37b170c": [
+    "165652bc": [
+      2,
+      3,
+      4,
+      4
+    ],
+    "5911fd17": [
+      2,
+      3,
+      4,
+      4
+    ],
+    "afc8aea2": [
+      2,
+      3,
+      4,
+      4
+    ],
+    "f012aaa6": [
       2,
       3,
       4,
@@ -367,13 +313,13 @@
       4,
       4
     ],
-    "79b960c6": [
+    "b79450fc": [
       2,
       3,
       4,
       4
     ],
-    "356d693b": [
+    "946d34aa": [
       2,
       3,
       4,
