--- a/Lesson-5/package.json
+++ b/Lesson-5/package.json
@@ -9,12 +9,13 @@
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "build:client": "rimraf client-build && cross-env NODE_ENV=production webpack --config webpack.config.js",
     "build:server": "rimraf server-build && cross-env NODE_ENV=production webpack --config webpack.config.server.js",
-    "build": "npm run build:client && npm run build:server",
+    "build": "npm run build:client && npm run build:server && npm run upload",
     "start": "cross-env NODE_ENV=production node server/server.js",
     "practice": "cross-env NODE_ENV=practice webpack-dev-server",
     "lint": "eslint --ext .js --ext .jsx --ext .vue ./client",
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue ./client",
-    "pre-commit": "npm run lint"
+    "pre-commit": "npm run lint",
+    "upload": "node qiniuUpload.js"
   },
   "author": "",
   "license": "ISC",
@@ -52,6 +53,7 @@
     "nodemon": "^1.18.9",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
+    "qiniu": "^7.2.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "url-loader": "^1.1.2",
